--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,6 +2,7 @@
 <resources>
 
     <string name="app_name">UTNow</string>
+    
     <string-array 
         name = "list">
         <item>Home</item>
@@ -69,6 +70,11 @@
         <item>SigmaPhiOmega,30.289929,-97.745750</item>
         <item>ZetaTauAlpha,30.292828,-97.742297</item>
     </string-array>
-    <string name="action_settings">Settings</string>
-
+    
+    <string name = "action_settings">Settings</string>
+	
+    <string-array 
+        name = "maincampus">
+    </string-array>
+    
 </resources>
