--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,6 +2,9 @@
 <resources>
 
     <string name="app_name">UTNow</string>
+    <string name = "action_settings">Settings</string>
+    <string name="drawer_open">Menu</string>
+    <string name="drawer_close">UTNow</string>
     
     <string-array 
         name = "list">
@@ -53,6 +56,7 @@
 		<item>ZetaBetaTau,30.293665,-97.744653</item>
 		<item>ZetaPsi,30.294020,-97.742952</item>
     </string-array>
+    
     <string-array
         name = "sorority">
         <item>AlphaChiOmega,30.288989,-97.743379</item>
@@ -73,8 +77,6 @@
         <item>ZetaTauAlpha,30.292828,-97.742297</item>
     </string-array>
     
-    <string name = "action_settings">Settings</string>
-	
     <string-array 
         name = "maincampus">
     </string-array>
