Corrected location, changed presentation, and removed logging

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -60,7 +60,7 @@
     <string-array
         name = "sorority">
         <item>Alpha Chi Omega,30.288989,-97.743379</item>
-        <item>Alpha Delta Pi,30.292325,30.292325</item>
+        <item>Alpha Delta Pi,30.292325,-97.744654</item>
         <item>Alpha Epsilon Phi,30.289584,-97.744855</item>
         <item>Alpha Phi,30.282995,-97.739302</item>
         <item>Alpha Xi Delta,30.290166,-97.744830</item>
